first auto-commit-man

--- a/projects/print.html
+++ b/projects/print.html
@@ -75802,8 +75802,11 @@ print('\nTraining Done!')
 <div style="break-before: page; page-break-before: always;"></div><div class="cell markdown">
 <h1 id="scalable-bayesian-optimization-with-distributed-gaussian-processes-and-deep-kernel-learning"><a class="header" href="#scalable-bayesian-optimization-with-distributed-gaussian-processes-and-deep-kernel-learning">Scalable Bayesian optimization with distributed Gaussian processes and deep kernel learning</a></h1>
 <p>Authors: Carl Hvarfner, Leonard Papenmeier, Manu Upadhyaya</p>
-<h2 id="what-did-we-do"><a class="header" href="#what-did-we-do">What did we do</a></h2>
-<p>We implement a scalable algorithm for high-dimensional Bayesian optimization. Our implementation maintains arbitrary many GPs in parallel <strong>TODO:</strong> 1. <strong>What did we do?</strong> 2. <strong>Why should anyone care?</strong> 3. <strong>Why is this scalable?</strong> 4. <strong>What are our contributions?</strong> 5. <strong>Describe how the notebooks are organized/what they contain</strong></p>
+<p><strong>TODO:</strong> 1. <strong>What did we do?</strong> 2. <strong>Why should anyone care?</strong> 3. <strong>Why is this scalable?</strong> 4. <strong>What are our contributions?</strong> 5. <strong>Describe how the notebooks are organized/what they contain</strong></p>
+<h5 id="what-did-we-do"><a class="header" href="#what-did-we-do">What did we do</a></h5>
+<p>We implement a scalable algorithm for high-dimensional Bayesian optimization. Our implementation maintains arbitrary many GPs in parallel</p>
+</div>
+<div class="cell code" execution_count="1" scrolled="false">
 </div>
 <div style="break-before: page; page-break-before: always;"></div><div class="cell markdown">
 <h1 id="bayesian-optimization---an-overview"><a class="header" href="#bayesian-optimization---an-overview">Bayesian Optimization - An overview</a></h1>
