--- a/000_0-sds-3-x-projects-2022/contents/student-project-05_group-DistOpt/student-project-05_group-DistOpt/01_Bayesian_optimization.html
+++ b/000_0-sds-3-x-projects-2022/contents/student-project-05_group-DistOpt/student-project-05_group-DistOpt/01_Bayesian_optimization.html
@@ -155,11 +155,10 @@
 <h4 id="applications"><a class="header" href="#applications">Applications</a></h4>
 <p>Bayesian optimization has been applied to solve a wide range of problems, including: - learning to rank, - computer graphics and visual design, - robotics, - sensor networks, - automatic algorithm configuration, - automatic machine learning toolboxes, - reinforcement learning, - planning, - visual attention, - architecture configuration in deep learning, - static program analysis, - experimental particle physics, - chemistry, - material design, and - drug development.</p>
 <h4 id="basic-algorithm-for-bayesian-optimization"><a class="header" href="#basic-algorithm-for-bayesian-optimization">Basic algorithm for Bayesian optimization</a></h4>
-<p>BO consists of two main components: 1. Bayesian statistical model for modeling the objective function called the surrogate model, and 2. an acquisition function for deciding where to sample next.</p>
+<p>BO consists of two main components: 1. Bayesian statistical model for modeling the objective function called the <em><strong>surrogate model</strong></em>, and 2. an <em><strong>acquisition function</strong></em> for deciding where to sample next.</p>
 <p><strong>UPDATE BELOW!!!</strong></p>
-<p>Roughly speaking, BO algorithms uses the following steps: - Sample \(N\) initial points \({x_i}_{i=0}^{N}\) and evaluate them - while budget to evaluate the function left: - update the surrogate model on all data gathered so far - find next point to evaluate by optimizing an acquisition function \(\alpha\) - evaluate next point</p>
+<p>Roughly speaking, BO algorithms uses the following steps: - Sample \(N\) initial points \({x_i}_{i=0}^{N}\) and evaluate \(f\) at these points. - While budget to evaluate the function is left: - Update the surrogate model on all data gathered so far. - Find next point to evaluate by optimizing an acquisition function \(\alpha\). - Evaluate \(f\) at the next point.</p>
 <p>Optimizing the acquisition function is an optimization itself. The acquisition is designed such that it achieves a trade-off between <em>exploration</em> and <em>exploitation</em>. Regions in the search space \(\mathcal{X}\) that were not evaluated often get higher priority, and, at the same time, regions with promising function values get high priority. However, the acquisition function is usually cheap to evaluate.</p>
-<p>For example, evaluating \(f\) requires running an expensive simulation such that approximating gradients is not feasible and the optimization has to be carried out using a limited number of function evaluations (usually, a few hundreds to a few thousands).</p>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 </div>
