--- a/000_0-sds-3-x-projects-2022/print.html
+++ b/000_0-sds-3-x-projects-2022/print.html
@@ -394,9 +394,6 @@ class VQADatset(Dataset):
         return {'txt': txt, 'encoded_txt': '', 'label': label, 'encoded_img': encoded_img}
 </code></pre>
 </div>
-<div class="cell markdown">
-<h2 id="model"><a class="header" href="#model">Model</a></h2>
-</div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">class VQAModel(torch.nn.Module):
     def __init__(self, d_model: int=384, nhead: int=6, d_hid: int=384, nlayers: int=1, n_class: int=1):
@@ -452,6 +449,11 @@ class VQADatset(Dataset):
         pred = self.linear_cls(txt_img_features)
         return pred
 </code></pre>
+</div>
+<div class="cell markdown">
+<h2 id="training"><a class="header" href="#training">Training</a></h2>
+<p>We train the model with a batch size of 256 and learning rate of 1e-5 (Aadam) for 40 epochs.</p>
+<p>We use Horovod to distribute the training on multiple GPUs. Using Horovod we can train on single-GPU, multiple-GPUs, or even multiple hosts without any further code changes.</p>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">def train_one_epoch(model, optimizer, criterion, data_loader, epoch, device):
@@ -75827,11 +75829,10 @@ print('\nTraining Done!')
 <h4 id="applications"><a class="header" href="#applications">Applications</a></h4>
 <p>Bayesian optimization has been applied to solve a wide range of problems, including: - learning to rank, - computer graphics and visual design, - robotics, - sensor networks, - automatic algorithm configuration, - automatic machine learning toolboxes, - reinforcement learning, - planning, - visual attention, - architecture configuration in deep learning, - static program analysis, - experimental particle physics, - chemistry, - material design, and - drug development.</p>
 <h4 id="basic-algorithm-for-bayesian-optimization"><a class="header" href="#basic-algorithm-for-bayesian-optimization">Basic algorithm for Bayesian optimization</a></h4>
-<p>BO consists of two main components: 1. Bayesian statistical model for modeling the objective function called the surrogate model, and 2. an acquisition function for deciding where to sample next.</p>
+<p>BO consists of two main components: 1. Bayesian statistical model for modeling the objective function called the <em><strong>surrogate model</strong></em>, and 2. an <em><strong>acquisition function</strong></em> for deciding where to sample next.</p>
 <p><strong>UPDATE BELOW!!!</strong></p>
-<p>Roughly speaking, BO algorithms uses the following steps: - Sample \(N\) initial points \({x_i}_{i=0}^{N}\) and evaluate them - while budget to evaluate the function left: - update the surrogate model on all data gathered so far - find next point to evaluate by optimizing an acquisition function \(\alpha\) - evaluate next point</p>
+<p>Roughly speaking, BO algorithms uses the following steps: - Sample \(N\) initial points \({x_i}_{i=0}^{N}\) and evaluate \(f\) at these points. - While budget to evaluate the function is left: - Update the surrogate model on all data gathered so far. - Find next point to evaluate by optimizing an acquisition function \(\alpha\). - Evaluate \(f\) at the next point.</p>
 <p>Optimizing the acquisition function is an optimization itself. The acquisition is designed such that it achieves a trade-off between <em>exploration</em> and <em>exploitation</em>. Regions in the search space \(\mathcal{X}\) that were not evaluated often get higher priority, and, at the same time, regions with promising function values get high priority. However, the acquisition function is usually cheap to evaluate.</p>
-<p>For example, evaluating \(f\) requires running an expensive simulation such that approximating gradients is not feasible and the optimization has to be carried out using a limited number of function evaluations (usually, a few hundreds to a few thousands).</p>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 </div>
