--- a/000_0-sds-3-x-projects-2022/contents/student-project-03_group-WikiKG90mv2/student-project-03_group-WikiKG90mv2/0x_Motif_search_defination_code.html
+++ b/000_0-sds-3-x-projects-2022/contents/student-project-03_group-WikiKG90mv2/student-project-03_group-WikiKG90mv2/0x_Motif_search_defination_code.html
@@ -6361,6 +6361,10 @@ val T_32_1_count = count_T_mn_p_dataframe_pipline (T_32_1_Query_List)
 <pre><code class="language-scala">// Example: Count T
 val Sup_T_32_1_count = count_T_mn_p_dataframe_pipline (Sup_T_32_1_Query_List)
 </code></pre>
+<div class="output execute_result plain_result" execution_count="1">
+<pre><code>Sup_T_32_1_count: Seq[Long] = List(82327906, 200080767, 430486542, 437699609)
+</code></pre>
+</div>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-scala">val T_32_all_count = count_T_mn_p_dataframe_pipline (T_32_all_Query_List)
