--- a/000_0-sds-3-x-projects-2022/contents/student-project-09_group-DistEnsembles/student-project-09_group-DistEnsembles/02_Main.html
+++ b/000_0-sds-3-x-projects-2022/contents/student-project-09_group-DistEnsembles/student-project-09_group-DistEnsembles/02_Main.html
@@ -146,7 +146,7 @@
                 <div id="content" class="content">
                     <main>
                         <div class="cell markdown">
-<h2 id="distributed-ensemble-for-semi-supervised-learning-with-pseudolabels"><a class="header" href="#distributed-ensemble-for-semi-supervised-learning-with-pseudolabels">Distributed Ensemble for semi-supervised learning with pseudolabels</a></h2>
+<h2 id="training-distributed-ensembles-for-3d-human-pose-estimation"><a class="header" href="#training-distributed-ensembles-for-3d-human-pose-estimation">Training Distributed Ensembles for 3D Human Pose Estimation</a></h2>
 <p>Here we provide the necessary code for creating and training a distributed ensemble of temporal convolutional network for semi-supervised learning with pseudolabels.</p>
 </div>
 <div class="cell markdown">
@@ -172,8 +172,6 @@ import matplotlib.pyplot as plt
 </div>
 <div class="cell markdown">
 <h3 id="data"><a class="header" href="#data">Data</a></h3>
-<p>The HumanEva-I dataset are used to evaluate our distributed ensemble models. HumanEva-I consists of 4 subjects performing a set of 6 pre-defined actions including Walk, Jog, Throw/catch, Gesture, Box, and Combo. Ground-truth 3D motions are captured using a commercial motion capture system provided by ViconPeack. Videos data is recorded via using two commerical video capture systems. Originally, there are 56 sequences and approximately 80000 frames in total. 15-joint sekeleton is adopted, giving 15 keypoints, and the provided train/test split is used. Our approach of distributed ensembles can be applied on other datasets for 3D pose estimation, where locations of 2D and 3D are provided. * frame visualization should be added here.</p>
-<p>HumanEva-I is pre-processed using Matlab and stored in the .CSV format, which Apache Spark supports. The train and test data are loaded as DataFrames. The columns consists of frame index, subject index, action name, camera index, and 2D and 3D positions of each joint (keypoint). For brevity, the subject indices, action names and camera indices are grouped together to a single column.</p>
 </div>
 <div class="cell code" execution_count="1" scrolled="false">
 <pre><code class="language-python">from pyspark.sql.types import StructType, StringType, DoubleType, IntegerType
