--- a/000_0-sds-3-x-projects-2022/contents/student-project-02_group-DDLOfVision/student-project-02_group-DDLOfVision/00_vqa_introduction.html
+++ b/000_0-sds-3-x-projects-2022/contents/student-project-02_group-DDLOfVision/student-project-02_group-DDLOfVision/00_vqa_introduction.html
@@ -154,8 +154,7 @@
 </ul>
 </div>
 <div class="cell markdown">
-<p>Note: due to technical network errors the students will provide a recording.</p>
-<p><a href="https://www.youtube.com/somenicebrokenlink"><img src="http://img.youtube.com/vi/5NBjLwC5-Sw/0.jpg" alt="ScaDaMaLe UU 2022 - Student Group Project Presentations" /></a></p>
+<p><a href="https://www.youtube.com/watch?v=MarT6EC9kEQ"><img src="http://img.youtube.com/vi/MarT6EC9kEQ/0.jpg" alt="ScaDaMaLe WASP-UU 2022 - Student Group Project 02 - Visual Question Answering using Transformers" /></a></p>
 </div>
 <div class="cell markdown">
 <h2 id="task-description"><a class="header" href="#task-description">Task Description</a></h2>
