--- a/000_0-sds-3-x-projects-2022/contents/student-projects-BrIntSuSvConclusion/student-projects-BrIntSuSvConclusion/BrIntSuSv.html
+++ b/000_0-sds-3-x-projects-2022/contents/student-projects-BrIntSuSvConclusion/student-projects-BrIntSuSvConclusion/BrIntSuSv.html
@@ -147,8 +147,13 @@
                     <main>
                         <div class="cell markdown">
 <h1 id="conclusion-and-brintsusv"><a class="header" href="#conclusion-and-brintsusv">CONCLUSION and BrIntSuSv</a></h1>
-<p><strong>BrIntSuSv</strong> := Brainstorming Interaction around &quot;WASP brainstorms for hypothetical AMPsPl-DSProcess pitches to M. Wallenberg and the Board to actualise its focus on <em>Sustainable Sverige</em></p>
-<p>This was a pure face-to-face tranmission</p>
+<p><strong>BrIntSuSv</strong> := <strong>Br</strong>ainstorming <strong>Int</strong>eraction around:</p>
+<blockquote>
+<p>... hypothetical <em>Algorithms-Machines-Peoples-Planet</em> (AMPsPl) <em>framework</em> for the Scalable <em>Data Science Process</em></p>
+</blockquote>
+<p>elevator pitches to Mr. M. Wallenberg and the Board to commercially actualise its focus on <strong>Su</strong>stainable <strong>Sv</strong>erige</p>
+<p>This was a pure face-to-face tranmission.</p>
+<p>For background and context view <a href="https://youtu.be/-CMIk79hdMI">introductory lecture</a> and explore <a href="https://lamastex.github.io/ScaDaMaLe/000_1-sds-3-x-spark/">introductory module</a>.</p>
 </div>
 <div class="cell markdown">
 <h2 id="teaching-assistance"><a class="header" href="#teaching-assistance">Teaching Assistance</a></h2>
