--- a/000_0-sds-3-x-projects-2022/introduction.html
+++ b/000_0-sds-3-x-projects-2022/introduction.html
@@ -145,7 +145,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+                        <h1 id="hello-my-friends"><a class="header" href="#hello-my-friends">hello my friends</a></h1>
 
                     </main>
 
