--- a/000_0-sds-3-x-projects-2022/index.html
+++ b/000_0-sds-3-x-projects-2022/index.html
@@ -145,7 +145,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="hello-my-friends"><a class="header" href="#hello-my-friends">hello my friends</a></h1>
+                        <h1 id="group-projects-scadamale-wasp-instance-2022-2023"><a class="header" href="#group-projects-scadamale-wasp-instance-2022-2023">Group Projects: ScaDaMaLe WASP Instance 2022-2023</a></h1>
+<p>Edited by Oskar Åsbrink and Raazesh Sainudiin.</p>
+<p>Peer-reviewed by project authors according to <a href="https://github.com/lamastex/scalable-data-science/blob/master/dbcArchives/2021/PEER_REVIEW_INSTRUCTIONS.md">these instructions</a> using <a href="https://github.com/lamastex/scalable-data-science/blob/master/dbcArchives/2021/PEER_REVIEW.md">this template</a>.</p>
+<h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
+<p>A total of 13 PhD Student Groups did Projects of their choosing in Scalable Data Science and Distributed Machine Learning, a mandatory as well as elective course of The WASP Graduate School AI-track in 2022-2023. See <a href="https://lamastex.github.io/ScaDaMaLe/">ScaDaMaLe Course Pathways</a> to appreciate the pre-requisite modules 000_1 through 000_9 for the union of all 13 projects.</p>
+<p>Best Group Project: The Group Project <strong>TBD</strong> by <strong>TBC</strong> won the Best Group-Project Prize on the basis of peer-review.</p>
+<h1 id="table-of-contents"><a class="header" href="#table-of-contents">Table of Contents</a></h1>
+<ol>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-01_group-GraphOfWiki/student-project-01_group-GraphOfWiki/00_Introduction.html">Graph of Wiki</a> by Vilhelm Agdur, Henrik Ekström, Simon Johansson and Albin Toft.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-02_group-DDLOfVision/student-project-02_group-DDLOfVision/00_vqa_introduction.html">Visual Question Answering using Transformers</a> by Ehsan Doostmohammadi and Hariprasath Govindarajan.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-03_group-WikiKG2/student-project-03_group-WikiKG2/00_ingest_data.html">Scalable Analysis of a Massive Knowledge Graph</a> by Filip Cornell, Yifei Jin, Joel Oskarsson and Tianyi Zho.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-04_group-FedMLMedicalApp/student-project-04_group-FedMLMedicalApp/00_Notebook_Presentation.html">Federated Learning for Brain Tumor Segmentation</a> by Jingru Fu, Lidia Kidane and Romuald Esdras Wandji.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-05_group-DistOpt/student-project-05_group-DistOpt/00_introduction.html">Scalable Bayesian optimization with distributed Gaussian processes and deep kernel learning</a> by Carl Hvarfner, Leonard Papenmeier and Manu Upadhyaya.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-07_group-ExpsZerOInit/student-project-07_group-ExpsZerOInit/00_introduction_resnet.html">Experiments with ZerO initialisation</a> by Livia Qian and Rajmund Nagy.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-08_group-WikiSearch/student-project-08_group-WikiSearch/00_Introduction.html">Smart Search in Wikipedia</a> by David Mohlin, Erik Englesson and Fereidoon Zangeneh.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-09_group-DistEnsembles/student-project-09_group-DistEnsembles/00_Introduction.html">Distributed Ensembles for 3D Human Pose Estimation</a> by Hampus Gummesson Svensson, Xixi Liu, Yaroslava Lochman and Erik Wallin.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-10_group-RDI/student-project-10_group-RDI/00_introduction.html">Predicting the load in wireless networks</a> by Sofia Ek and Oscar Stenhammar.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-11_group-CollaborativeFiltering/student-project-11_group-CollaborativeFiltering/01_Introduction.html">Collaborative Filtering in Movie Recommender Systems</a> by Jacob Lindbäck, Rebecka Winqvist, Robert Bereza and Damianos Tranos.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-12_group-FedLearnOpt/student-project-12_group-FedLearnOpt/01_Federated_Learning_Introduction.html">Federated Learning Using Horovod</a> by Amandine Caut, Ali Dadras, Hoomaan Maskan and Seyedsaeed Razavikia.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-13_group-DRL/student-project-13_group-DRL/00_DistributedRL.html">Distributed Reinforcement Learning</a> by Johan Edstedt, Arvi Jonnarth and Yushan Zhang.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-project-14_group-EarthObs/student-project-14_group-EarthObs/00_Introduction.html">Earth Observation</a> by Daniel Brunnsåker, Alexander H. Gower and Filip Kronström.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/contents/student-projects-BrIntSuSvConclusion/student-projects-BrIntSuSvConclusion/BrIntSuSv.html">Conclusion and BrIntSuSb</a> by Raazesh Sainudiin.</li>
+<li><a href="https://lamastex.github.io/ScaDaMaLe/000_0-sds-3-x-projects-2022/editors.html">Editors</a></li>
+</ol>
 
                     </main>
 
